theme/scss/site/nav.scss
.wp-block-navigation__submenu-container {
	@extend .rounded;
	.wp-block-navigation-item {
		color: black !important;
	}
	.wp-block-navigation-item:hover {
		background-color: $grey-5;
	}
}

.wp-block-navigation__container .wp-block-navigation__submenu-container .wp-block-navigation__submenu-container{
	left: 100% !important;
	right: auto !important;
}

.wp-block-navigation__container > li {
	margin-right: 10px;
}

@media screen and (min-width: 782px) {
	.wp-block-columns:not(.is-not-stacked-on-mobile) > .site-title-column {
		flex: initial !important;
		width: initial !important;
	}
}

.wp-block-post-navigation-link {
	a {
		padding: .375rem .75rem !important;
	}
}

